<resources>
    <string name="app_name">Dev Device Info</string>
    <string name="app_full_name">Developer Device Information</string>
    <string name="welcome_to">Welcome to</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sample">Sample</string>
    <string name="ok">OK</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="loading">Loading…</string>
    <string name="send">SEND</string>
    <string name="search">Search</string>
    <string name="welcome_if_you_are">If you are</string>
    <string name="welcome_developer">Developer</string>
    <string name="welcome_user">User</string>
    <string name="welcome_for_dev">This app will help you to collect android devices information for application development. We have information of real android devices, such as camera parameter, screen, sensor. You can get all android device information on our server to show on this app. And we have open source code of this app on GitHub. We hope this app will help you to build a great app.</string>
    <string name="welcome_for_user">This app is used for collect information of android devices for application development. You can help us by send your device information via this app. The collected device information is for development only. We promise we will not retain your private information.</string>
    <string name="welcome_description">Description</string>
    <string name="welcome_description_submit">To send device information to our server. we call \"Submit\". Your device information will store on server and provide to another people. Don\'t worry about your private data and information. We just get and keep only device\'s hardware specification.</string>
    <string name="welcome_description_hardware">Information about hardware and software specification. e.g. android version, 32/64 bit support, battery capacity, cpu information, gpu information, ETC. So you can check your device specification from this menu.</string>
    <string name="welcome_description_sensor">Android device have many sensor and this menu will be show all sensor and sensor\'s information on your device.</string>
    <string name="welcome_description_screen">Display screen is main problem for developer. Because it have many difference device with difference screen (We call \"Fragmentation\"). So this information will be show display screen information that developer should know.</string>
    <string name="welcome_description_camera">Camera information is one of fragmentation problem (Maybe more problem than display screen). It have many camera parameter that difference with another device. You don\'t wonder if you found some android app that have a problem about camera device.</string>
    <string name="welcome_description_camera2">Camera 2 (Camera 2 API) is new API for access camera on device (Android Lollipop or later). This API will allow developer to use camera with better efficiency. It contain with many advance parameters, so developer should know to build a great camera app with this new API.</string>
    <string name="welcome_description_feature">Feature on android device is depending on hardware and software, so not all feature will be support on some device. This cause why some device can\'t download some application. You can check about feature supported on your device from this menu.</string>
    <string name="welcome_description_applist">Listing all application that installed on your device and show information about package name or permission that us in this app (You can check permission from each application). But we just show application information in this app only . We didn\'t send to our server. So don\'t worry about it.</string>
    <string name="welcome_description_switcher">How you can see these information? on website? Absolutely not, you can see all device information on our server directly in this app. This menu will show the list of device for choosing. When choose any device. That device information will download to this device and show instead of your device.</string>
    <string name="menu_choose">Choose Information</string>
    <string name="menu_back_your_device">Back To Your Device</string>
    <string name="menu_change_device">Device Switcher</string>
    <string name="menu_submit">Submit Your Device Info</string>
    <string name="menu_hardware">Hardware &amp; Software</string>
    <string name="menu_sensor">Sensor</string>
    <string name="menu_screen">Screen</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_camera2">Camera 2</string>
    <string name="menu_features">Feature</string>
    <string name="menu_applist">App List</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_your_device">(Your Device)</string>
    <string name="menu_other_device">(Other Device)</string>
    <string name="menu_unknown_device">Unknown</string>
    <string name="camera_camera_id">Camera ID</string>
    <string name="camera_antibanding">Antibanding</string>
    <string name="camera_shutter_sound">Can Disable Shutter Sound</string>
    <string name="camera_color_effect">Color Effect</string>
    <string name="camera_facing">Facing</string>
    <string name="camera_flash_mode">Flash Mode</string>
    <string name="camera_focus_mode">Focus Mode</string>
    <string name="camera_jpeg_thumbnail">JPEG Thumbnail Size (px)</string>
    <string name="camera_image_orientation">Image orientation</string>
    <string name="camera_picture_format">Picture Format</string>
    <string name="camera_preview_format">Preview Format</string>
    <string name="camera_preview_framerate">Preview Frame Rate (fps)</string>
    <string name="camera_picture_size">Picture Size (px)</string>
    <string name="camera_preview_size">Preview Size (px)</string>
    <string name="camera_preview_frame_range">Preview FPS Range (fps)</string>
    <string name="camera_scene_mode">Scene Mode</string>
    <string name="camera_video_quality">Video Quality Profile (px)</string>
    <string name="camera_timelapse_quality">Time Lapse Quality Profile (px)</string>
    <string name="camera_highspeed_quality">High Speed Quality Profile (PX)</string>
    <string name="camera_video_size">Video Size (px)</string>
    <string name="camera_white_balance">White Balance</string>
    <string name="camera_auto_exposure_lock">Auto Exposure Lock Supported</string>
    <string name="camera_auto_white_balance_lock">Auto White Balance Lock Supported</string>
    <string name="camera_auto_smooth_zoom">Smooth Zoom Supported</string>
    <string name="camera_video_snapshot">Video Snapshot Supported</string>
    <string name="camera_video_stabilization">Video Stabilization Supported</string>
    <string name="camera_zoom">Zoom Supported</string>
    <string name="camera2_camera_id">Camera ID</string>
    <string name="camera2_active_array_size">Active Array Size</string>
    <string name="camera2_ae_compensation_range">AE Compensation Range</string>
    <string name="camera2_ae_compensation_step">AE Compensation Step</string>
    <string name="camera2_available_ae_antibanding_mode">Available AE Antibanding Mode</string>
    <string name="camera2_available_ae_mode">Available AE Mode</string>
    <string name="camera2_available_af_mode">Available AF Mode</string>
    <string name="camera2_available_ar_target_fps_range">Available AE Target FPS Range</string>
    <string name="camera2_available_aperture">Available Aperture</string>
    <string name="camera2_available_awb_mode">Available AWB Mode</string>
    <string name="camera2_available_edge_mode">Available Edge Mode</string>
    <string name="camera2_available_effect">Available Effect</string>
    <string name="camera2_available_face_detect_mode">Available Face Detect Mode</string>
    <string name="camera2_available_available_filter_density">Available Filter Density</string>
    <string name="camera2_available_flash">Available Flash</string>
    <string name="camera2_available_focal_length">Available Focal Length</string>
    <string name="camera2_available_hot_pixel_map_mode">Available Hot Pixel Map Mode</string>
    <string name="camera2_available_hot_pixel_mode">Available Hot Pixel Mode</string>
    <string name="camera2_available_jpeg_thumbnail_size">Available JPEG Thumbnail Size</string>
    <string name="camera2_available_max_digital_zoom">Available Max Digital Zoom</string>
    <string name="camera2_available_noise_reduction_mode">Available Noise Reduction Mode</string>
    <string name="camera2_available_optical_stabilization">Available Optical Stabilization</string>
    <string name="camera2_available_request_capability">Available Request Capability</string>
    <string name="camera2_available_scene_mode">Available Scene Mode</string>
    <string name="camera2_available_test_pattern_mode">Available Test Pattern Mode</string>
    <string name="camera2_available_tone_map_mode">Available Tone Map Mode</string>
    <string name="camera2_available_video_stabilization_mode">Available Video Stabilization Mode</string>
    <string name="camera2_color_filter_arrangement">Color Filter Arrangement</string>
    <string name="camera2_exposure_time_range">Exposure Time Range</string>
    <string name="camera2_focus_distance_calibration">Focus Distance Calibration</string>
    <string name="camera2_hyper_focal_distance_supported">Hyper Focal Distance Supported</string>
    <string name="camera2_lens_facing">Lens Facing</string>
    <string name="camera2_max_analog_sensitivity">Max Analog Sensitivity</string>
    <string name="camera2_max_face_count">Max Face Count</string>
    <string name="camera2_max_frame_duration">Max Frame Duration</string>
    <string name="camera2_max_number_output_proc">Max Number Output Proc</string>
    <string name="camera2_max_number_output_proc_stall">Max Number Output Proc Stall</string>
    <string name="camera2_max_number_output_raw">Max Number Output RAW</string>
    <string name="camera2_max_region_ae">Max Region AE</string>
    <string name="camera2_max_region_awb">Max Region AWB</string>
    <string name="camera2_minimum_focus_distance">Minimum Focus Distance</string>
    <string name="camera2_partial_result_count">Partial Result Count</string>
    <string name="camera2_physical_size">Physical Size</string>
    <string name="camera2_pipeline_max_depth">Pipeline Max Depth</string>
    <string name="camera2_pixel_array_size">Pixel Array Size</string>
    <string name="camera2_reference_illuminant_1">Reference Illuminant 1</string>
    <string name="camera2_reference_illuminant_2">Reference Illuminant 2</string>
    <string name="camera2_scale_scropping_type">Scale Cropping Type</string>
    <string name="camera2_sensitivity_range">Sensitivity Range</string>
    <string name="camera2_sensor_orientation">Sensor Orientation</string>
    <string name="camera2_color_correction_aberration_mode">Color Correction Aberration Mode</string>
    <string name="camera2_support_hardware_level">Support Hardware Level</string>
    <string name="camera2_highspeed_video_fps_range">High Speed Video FPS Range</string>
    <string name="camera2_highspeed_video_size">High Speed Video Size</string>
    <string name="camera2_support_image_format">Support Image Format</string>
    <string name="camera2_support_output_size">Support Output Size</string>
    <string name="sensor_vendor">Vendor</string>
    <string name="sensor_type">Type</string>
    <string name="sensor_power">Power</string>
    <string name="sensor_max_range">Max Range</string>
    <string name="sensor_resolution">Resolution</string>
    <string name="sensor_min_delay">Min Delay</string>
    <string name="sensor_max_delay">Max Delay</string>
    <string name="sensor_fifo_reserved">FIFO Reserved Event</string>
    <string name="sensor_fifo_max">FIFO Max Event</string>
</resources>