<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/global_margin_padding_large"
        app:cardCornerRadius="@dimen/global_card_view_corner">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/global_margin_padding_large">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome_if_you_are"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/welcome_text_app_name_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/global_margin_padding"
                        android:text="@string/welcome_user"
                        android:textColor="@color/red"
                        android:textSize="@dimen/welcome_text_header_size" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome_for_user"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/global_text_size" />

                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_skip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/global_margin_padding"
                    android:layout_marginLeft="@dimen/global_margin_padding"
                    android:layout_marginRight="@dimen/global_margin_padding_small"
                    android:layout_marginTop="@dimen/global_margin_padding"
                    android:layout_weight="1"
                    android:background="@drawable/selector_box_corner_yellow"
                    android:text="@string/skip"
                    android:textColor="@color/white"
                    android:textSize="@dimen/global_text_size" />

                <Button
                    android:id="@+id/button_next"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/global_margin_padding"
                    android:layout_marginLeft="@dimen/global_margin_padding_small"
                    android:layout_marginRight="@dimen/global_margin_padding"
                    android:layout_marginTop="@dimen/global_margin_padding"
                    android:layout_weight="1"
                    android:background="@drawable/selector_box_corner_green"
                    android:text="@string/next"
                    android:textColor="@color/white"
                    android:textSize="@dimen/global_text_size" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>

