<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/global_margin_padding">

    <android.support.v7.widget.CardView
        android:layout_width="@dimen/global_dialog_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/global_margin_padding"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/global_card_view_corner">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/global_margin_padding_large">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/global_margin_padding_large"
                android:text="@string/sample"
                android:textColor="@color/red"
                android:textSize="@dimen/global_text_size_large" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/sensor_card_title_width"
                    android:layout_height="wrap_content"
                    android:text="@string/sensor_vendor"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/global_text_size_small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_vendor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/global_margin_padding"
                    android:text="@string/sample"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/global_text_size_small" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/global_margin_padding_small"
                android:paddingTop="@dimen/global_margin_padding_small">

                <TextView
                    android:layout_width="@dimen/sensor_card_title_width"
                    android:layout_height="wrap_content"
                    android:text="@string/sensor_type"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/global_text_size_small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/global_margin_padding"
                    android:text="@string/sample"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/global_text_size_small" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/global_margin_padding_small"
                android:paddingTop="@dimen/global_margin_padding_small">

                <TextView
                    android:layout_width="@dimen/sensor_card_title_width"
                    android:layout_height="wrap_content"
                    android:text="@string/sensor_vendor"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/global_text_size_small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/global_margin_padding"
                    android:text="@string/sample"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/global_text_size_small" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/global_margin_padding_small"
                android:paddingTop="@dimen/global_margin_padding_small">

                <TextView
                    android:layout_width="@dimen/sensor_card_title_width"
                    android:layout_height="wrap_content"
                    android:text="@string/sensor_power"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/global_text_size_small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_power"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/global_margin_padding"
                    android:text="@string/sample"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/global_text_size_small" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/global_margin_padding_small"
                android:paddingTop="@dimen/global_margin_padding_small">

                <TextView
                    android:layout_width="@dimen/sensor_card_title_width"
                    android:layout_height="wrap_content"
                    android:text="@string/sensor_max_range"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/global_text_size_small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_max_range"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/global_margin_padding"
                    android:text="@string/sample"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/global_text_size_small" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/global_margin_padding_small"
                android:paddingTop="@dimen/global_margin_padding_small">

                <TextView
                    android:layout_width="@dimen/sensor_card_title_width"
                    android:layout_height="wrap_content"
                    android:text="@string/sensor_resolution"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/global_text_size_small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_resolution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/global_margin_padding"
                    android:text="@string/sample"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/global_text_size_small" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/global_margin_padding_small"
                android:paddingTop="@dimen/global_margin_padding_small">

                <TextView
                    android:layout_width="@dimen/sensor_card_title_width"
                    android:layout_height="wrap_content"
                    android:text="@string/sensor_min_delay"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/global_text_size_small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_min_delay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/global_margin_padding"
                    android:text="@string/sample"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/global_text_size_small" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/global_margin_padding_small"
                android:paddingTop="@dimen/global_margin_padding_small">

                <TextView
                    android:layout_width="@dimen/sensor_card_title_width"
                    android:layout_height="wrap_content"
                    android:text="@string/sensor_max_delay"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/global_text_size_small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_max_delay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/global_margin_padding"
                    android:text="@string/sample"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/global_text_size_small" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/global_margin_padding_small"
                android:paddingTop="@dimen/global_margin_padding_small">

                <TextView
                    android:layout_width="@dimen/sensor_card_title_width"
                    android:layout_height="wrap_content"
                    android:text="@string/sensor_fifo_reserved"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/global_text_size_small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_fifo_reserved_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/global_margin_padding"
                    android:text="@string/sample"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/global_text_size_small" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/global_margin_padding_small"
                android:paddingTop="@dimen/global_margin_padding_small">

                <TextView
                    android:layout_width="@dimen/sensor_card_title_width"
                    android:layout_height="wrap_content"
                    android:text="@string/sensor_fifo_max"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/global_text_size_small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_fifo_max_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/global_margin_padding"
                    android:text="@string/sample"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/global_text_size_small" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>