<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/global_margin_padding_large"
        app:cardCornerRadius="@dimen/global_card_view_corner">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/global_margin_padding_large">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/global_margin_padding"
                        android:text="@string/welcome_description"
                        android:textColor="@color/red"
                        android:textSize="@dimen/welcome_text_header_size" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/iv_menu_icon"
                            android:layout_width="@dimen/menu_image_size"
                            android:layout_height="@dimen/menu_image_size"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/menu_icon_hardware"
                            android:background="@drawable/shape_oval_red" />

                        <TextView
                            android:id="@+id/tv_menu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/menu_hardware"
                            android:textSize="@dimen/global_text_size"
                            android:textColor="@color/dark_gray"
                            android:layout_marginLeft="@dimen/global_margin_padding" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/global_text_size"
                        android:text="@string/welcome_description_hardware"
                        android:textSize="@dimen/global_text_size"
                        android:textColor="@color/dark_gray" />

                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"></FrameLayout>

                <Button
                    android:id="@+id/button_ok"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/global_margin_padding"
                    android:layout_marginLeft="@dimen/global_margin_padding_small"
                    android:layout_marginRight="@dimen/global_margin_padding"
                    android:layout_marginTop="@dimen/global_margin_padding"
                    android:layout_weight="1"
                    android:background="@drawable/selector_box_corner_green"
                    android:text="@string/ok"
                    android:textColor="@color/white"
                    android:textSize="@dimen/global_text_size" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>

